--- a/Hospital/Templates/Medico/insertar.html
+++ b/Hospital/Templates/Medico/insertar.html
@@ -1,4 +1,5 @@
 {% include "Inc/header.html" %}
+{% for m in medico%}
 
 
 <div class="ui container">
@@ -10,7 +11,7 @@
 
             <div class="field">
                 <label for="">Nombre Completo</label>
-                <input type="text" name="nombrecompleto" id="" required>
+                <input type="text" name="nombrecompleto" id="" value="{ m.NombreCompleto}" required>
             </div>
 
             <div class="field">
@@ -85,7 +86,7 @@
 
     </form>
 
-    
+    {% endfor %}
 </div>
 
 
