se creo y funcional el insertar hospital con la llave foranea

--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -12,7 +12,7 @@
     <script src="{% static 'Js/jquery-3.1.1.min.js'%}"></script>
     <script src="{% static 'Js/semantic.js' %}"></script>
     <script src="{% static 'Js/sweetalert.min.js'%}"></script>
-    <script src="{% static 'Js/alerta.js'%}"></script>
+    <script src="{% static 'Js/alerta-medico.js'%}"></script>
     <title>Document</title>
 </head>
 
@@ -42,12 +42,10 @@
                 <a href="/Hospital/insertar" class="item">Registrar Hospitales</a>
             </div>
         </div>
-
-        <a href="/Usuario/logout" class="item right">Logut</a> 
         
-
         <a href="/Usuario/insertar" class="item right">Registrarse</a>
         <a href="/Usuario/login" class="item right">Iniciar Sesión</a>
+        <a href="/Usuario/logout" class="item right">Logut</a> 
 
 
 
