--- a/Hospital/Templates/Medico/listado.html
+++ b/Hospital/Templates/Medico/listado.html
@@ -4,7 +4,7 @@
 <script src="{% static 'Js/alerta.js' %}"></script>
 
 <div class="ui container">
-<h1 style="text-align: center;">LISTADO EMPLEADOS</h1>
+<h1 style="text-align: center;">LISTADO MEDICOS</h1>
 <table  class="ui red table">
 <thead>
     <tr>
