funcional cruds relacionales (CRUD MEDICO - CRUD HOSPITAL)

--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -13,6 +13,7 @@
     <script src="{% static 'Js/semantic.js' %}"></script>
     <script src="{% static 'Js/sweetalert.min.js'%}"></script>
     <script src="{% static 'Js/alerta-medico.js'%}"></script>
+    <script src="{% static 'Js/alerta-hospital.js'%}"></script>
     <title>Document</title>
 </head>
 
