--- a/Hospital/Templates/Medico/listado.html
+++ b/Hospital/Templates/Medico/listado.html
@@ -1,7 +1,7 @@
 {% include "Inc/header.html" %}
 {% load static %}
 
-<script src="{% static 'Js/alerta.js' %}"></script>
+<script src="{% static 'Js/alerta-medico.js'%}"></script>
 
 <div class="ui container">
 <h1 style="text-align: center;">LISTADO MEDICOS</h1>
@@ -37,7 +37,7 @@
 
         <td>
             <a href="/Medico/actualizar/{{ m.id }}"><i class="edit black icon "></i></a>  
-            <a href="#" onclick='borrar("{{m.id}}")'><i class="trash red icon"></i></a>
+            <a href="#" onclick='borrar1("{{m.id}}")'><i class="trash red icon"></i></a>
         </td>
     </tr>
 </tbody>
@@ -49,7 +49,29 @@
 </div>
 
 
+<script>
+    function borrar1(id){
+    swal({
+  title: "Estas seguro que quieres borrar?",
+  text: "La informacion que borres no la puedes recuperar!",
+  icon: "warning",
+  buttons: ["Cancelar", true],
+  dangerMode: true,
+})
+.then((willDelete) => {
+  if (willDelete) {
+    location.href = "/Medico/borrar/" + id;
+    swal("Se ha borrado exitosamente!", {
+      icon: "success",
+    });
 
+  } else {
+    swal("la informacion no se va a borrar!");
+  }
+});
+}
+
+</script>
 
 
 
