funcional los dos cruds(MEDICO-HOSPITAL) funcional registrar,login,logout,actualizarusuario,borrarusuario

--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -46,6 +46,11 @@
         
         <a href="/Usuario/insertar" class="item right">Registrarse</a>
         <a href="/Usuario/login" class="item right">Iniciar Sesión</a>
+
+
+     
+        <a href="/Usuario/actualizar/{{ id }}" class="item right">Actualizar Perfil</a>
+       
         <a href="/Usuario/logout" class="item right">Logut</a> 
 
 
