funcional los dos cruds(MEDICO-HOSPITAL) funcional registrar,login,logout,actualizarusuario,borrarusuario

--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 
 
@@ -49,7 +50,7 @@
 
 
      
-        <a href="/Usuario/actualizar/{{ id }}" class="item right">Actualizar Perfil</a>
+        <a href="/Usuario/actualizar/{{ u.id}}" class="item right">Actualizar Perfil</a>
        
         <a href="/Usuario/logout" class="item right">Logut</a> 
 
