--- a/Hospital/Templates/Hospital/actualizar.html
+++ b/Hospital/Templates/Hospital/actualizar.html
@@ -2,7 +2,7 @@
 {% for h in hospital %}
 
 <div class="ui container">
-    <h1 style="text-align: center;">Formulario Actualizacion Proveedor</h1>
+    <h1 style="text-align: center;">Formulario Actualizacion Hospital</h1>
 
     <form action="" method="POST" class="ui form">
         {% csrf_token %}
