se agrego la restriccion del header

--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -44,17 +44,19 @@
                 <a href="/Hospital/insertar" class="item">Registrar Hospitales</a>
             </div>
         </div>
-        
-        <a href="/Usuario/insertar" class="item right">Registrarse</a>
-        <a href="/Usuario/login" class="item right">Iniciar Sesión</a>
+ 
 
 
-     
+        {% if user.is_authenticated %}
         <a href="/Usuario/actualizar/{{ u.id}}" class="item right">Actualizar Perfil</a>
        
         <a href="/Usuario/logout" class="item right">Logut</a> 
 
+        {% else %}
 
+        <a href="/Usuario/insertar" class="item right">Registrarse</a>
+        <a href="/Usuario/login" class="item right">Iniciar Sesión</a>
+        {% endif %}
 
     </div>
 </body>
