se arreglo el id de la redireciion de editar perfil entre otras cosas

--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -48,7 +48,7 @@
 
         {% if user.is_authenticated %}
 
-        <div class="ui dropdown item">
+        <div class="ui dropdown item" style="margin-left: 925px;">
             Perfil<i class="dropdown icon"></i>
             <div class="menu">
                 <a href="/Usuario/actualizar/{{user.id}}" class="item right">Editar Perfil</a>
