--- a/Hospital/Templates/Inc/header.html
+++ b/Hospital/Templates/Inc/header.html
@@ -8,11 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'Css/semantic.css' %}">
+    <link rel="stylesheet" href="{% static 'Css/mensaje.css' %}">
     <script src="{% static 'Js/jquery-3.1.1.min.js'%}"></script>
     <script src="{% static 'Js/semantic.js' %}"></script>
     <script src="{% static 'Js/sweetalert.min.js'%}"></script>
     <script src="{% static 'Js/alerta-medico.js'%}"></script>
     <script src="{% static 'Js/alerta-hospital.js'%}"></script>
+
     <title>Document</title>
 </head>
 
@@ -48,7 +50,7 @@
 
         {% if user.is_authenticated %}
 
-        <div class="ui dropdown item">
+        <div class="ui dropdown item" style="margin-left: 1095px;">
             Perfil<i class="dropdown icon"></i>
             <div class="menu">
                 <a href="/Usuario/actualizar/{{user.id}}" class="item right">Editar Perfil</a>
