--- a/Hospital/Templates/Usuario/actualizar.html
+++ b/Hospital/Templates/Usuario/actualizar.html
@@ -24,7 +24,7 @@
             </div>
             <div class="field">
                 <label for="">Password</label>
-                <input type="password" name="password" id="" value="{{user.password}}" required>
+                <input type="password" name="password" id="" value="" required>
             </div>
         </div>
 
